--- a/src/app/pages/stores/store.component.html
+++ b/src/app/pages/stores/store.component.html
@@ -1,37 +1,60 @@
 <block-ui>
-    <div class="box box-primary">
-        <div class="box-body">
-           <div class="widget-controls">
+  <div class="box box-primary">
+    <div class="box-body">
+      <!-- <div class="widget-controls">
                <a  class="btn btn-info btn-sm mb-1" routerLink="/stores/create"><i class="fa fa-plus"></i> Add Store</a>
 
-            </div>
-            <span id="responseText"></span>
-            <table class="table table-striped  table-sm row-border hover" datatable [dtOptions]="dtOptions">
-                <thead>
-                  <tr>
-                    <th>Name</th>
-                    <th>Partner</th>
-                    <th>Disburse Email</th>
-                    <th>Contact Person</th>
-                    <th>Contact Person Mobile</th>
+            </div> -->
 
-                    <th>Actions</th>
-                  </tr>
-                </thead>
-                <tbody>
-                 <tr *ngFor="let item of data; let i = index" title="{{item.id}}">
-                       <td>{{item.name}}</td>
-                       <td>{{item.partner.name}}</td>
-                       <td>{{item.disburse_email}}</td>
-                       <td>{{item.contact_person}}</td>
-                       <td>{{item.contact_person_mobile}}</td>
-                        <td> <div class="float-right"> <button type="button" class="btn btn-xs btn-warning" title="Edit this business details" style="margin-right: 5px" (click)="onEdit(item)"> <i  class="fa fa-pencil"></i></button><button type="button" class="btn btn-xs btn-danger" title="Trash this Business details" (click)="onDelete(item)"> <i class="fa fa-trash"></i></button> </div></td>
-                   </tr>
-                </tbody>
-              </table>
+      <div class="widget-controls row">
+        <div class="col-sm-6">
+          <a class="btn btn-info btn-sm mb-1" routerLink="/stores/create"><i class="fa fa-plus"></i> Add Store</a>
 
         </div>
+        <div class="col-sm-2"></div>
+        <div class="col-sm-4">
+          <div class="input-group search-box">
+            <input type="text" [(ngModel)]="searchKey" class="form-control search-input"
+              placeholder="Search this content">
+            <div class="input-group-append">
+              <button class="btn btn-info" type="button" (click)="onSearch()">
+                <i class="fa fa-search"></i>
+              </button>
+            </div>
+          </div>
+        </div>
+      </div>
+      <span id="responseText"></span>
+      <table id="stores-table" class="table table-striped  table-sm row-border hover">
+        <thead>
+          <tr>
+            <th>Name</th>
+            <th>Partner</th>
+            <th>Disburse Email</th>
+            <th>Contact Person</th>
+            <th>Contact Person Mobile</th>
+
+            <th>Actions</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr *ngFor="let item of data; let i = index" title="{{item.id}}">
+            <td>{{item.name}}</td>
+            <td>{{item.partner.name}}</td>
+            <td>{{item.disburse_email}}</td>
+            <td>{{item.contact_person}}</td>
+            <td>{{item.contact_person_mobile}}</td>
+            <td>
+              <div class="float-right"> <button type="button" class="btn btn-xs btn-warning"
+                  title="Edit this business details" style="margin-right: 5px" (click)="onEdit(item)"> <i
+                    class="fa fa-pencil"></i></button><button type="button" class="btn btn-xs btn-danger"
+                  title="Trash this Business details" (click)="onDelete(item)"> <i class="fa fa-trash"></i></button>
+              </div>
+            </td>
+          </tr>
+        </tbody>
+      </table>
+
     </div>
+  </div>
 </block-ui>
-
-
