--- a/src/app/pages/users/users.component.html
+++ b/src/app/pages/users/users.component.html
@@ -8,9 +8,10 @@
         <div class="col-sm-2"></div>
         <div class="col-sm-4">
           <div class="input-group search-box">
-            <input type="text" class="form-control search-input" placeholder="Search this content">
+            <input type="text" [(ngModel)]="searchKey" class="form-control search-input"
+              placeholder="Search this content">
             <div class="input-group-append">
-              <button class="btn btn-info" type="button">
+              <button class="btn btn-info" type="button" (click)="onSearch()">
                 <i class="fa fa-search"></i>
               </button>
             </div>
@@ -20,24 +21,8 @@
 
       <span id="responseText"></span>
 
-      <table class="table table-striped table-sm row-border hover">
-        <thead>
-          <tr>
-            <th></th>
-            <th>Color</th>
-            <th>Value</th>
 
-          </tr>
-        </thead>
-        <tbody>
-          <tr *ngFor="let item of data; let i = index">
-            <td>{{i+1}}</td>
-            <td>color</td>
-            <td>value</td>
-          </tr>
-        </tbody>
-      </table>
-      <!--table class="table table-striped  table-sm row-border hover" datatable [dtOptions]="dtOptions">
+      <table id="users-table" class="table table-striped  table-sm row-border hover">
         <thead>
           <tr>
             <th></th>
@@ -70,23 +55,24 @@
             </td>
           </tr>
         </tbody>
-      </table -->
+      </table>
 
-      <nav aria-label="...">
+      <!--     <nav aria-label="...">
         <ul class="pagination">
           <li class="page-item disabled">
             <a class="page-link" href="#" tabindex="-1">Previous</a>
           </li>
-          <li class="page-item"><a class="page-link" href="#">1</a></li>
+          <li class="page-item" *ngFor="let item of [].constructor(pages); let i = index"><button class="page-link"
+              (click)="loadPage(i)">{{i+1}}</button></li>
           <li class="page-item active">
             <a class="page-link" href="#">2 <span class="sr-only">(current)</span></a>
           </li>
           <li class="page-item"><a class="page-link" href="#">3</a></li>
-          <li class="page-item">
-            <a class="page-link" href="#">Next</a>
-          </li>
-        </ul>
-      </nav>
+      <li class="page-item">
+        <a class="page-link" href="#">Next</a>
+      </li>
+      </ul>
+      </nav> -->
 
     </div>
   </div>
