--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -121,7 +121,7 @@
       </div>
       <div class="row mb-3">
 
-        <table class="table table-hover table-responsive">
+        <table class="table table-hover">
           <thead>
             <tr>
               <th></th>
@@ -157,7 +157,7 @@
       </div>
       <div class="row mb-3">
 
-        <table class="table table-hover table-responsive">
+        <table class="table table-hover">
           <thead>
             <tr>
               <th></th>
