--- a/src/app/pages/collections/lipalater/pickup.component.html
+++ b/src/app/pages/collections/lipalater/pickup.component.html
@@ -113,7 +113,7 @@
 
 
                 <div class="form-group" *ngIf="rsubmitted">
-                  <label> Item Code </label>
+                  <label> Pickup Notes </label>
                   <textarea formControlName="pickupNotes" class="form-control validation-field"
                     placeholder="Pickup Notes"></textarea>
 
