--- a/src/app/pages/partners/update/update.component.html
+++ b/src/app/pages/partners/update/update.component.html
@@ -150,7 +150,7 @@
                 </div>
               </div>
 
-              <div class="row form-group">
+              <!-- <div class="row form-group">
                 <label class="control-label col-sm-3" for="title"><span class="float-right"> Years of Incorporation:
                   </span></label>
                 <div class="col-sm-7">
@@ -164,7 +164,7 @@
                     of Incorporation is required</small>
 
                 </div>
-              </div>
+              </div> -->
               <!--<div class="row form-group">
                       <label class="control-label col-sm-3" for="title"><span class="float-right"> Speciality: </span></label>
                           <div class="col-sm-7">
