--- a/src/app/pages/users/create/create.component.html
+++ b/src/app/pages/users/create/create.component.html
@@ -117,7 +117,7 @@
                     Number</small>
                 </div>
               </div>
-              <div class="row form-group">
+              <!-- <div class="row form-group">
 
                 <label class="control-label col-sm-3" for="inputName">Phone Number</label>
                 <div class="col-sm-7">
@@ -129,6 +129,33 @@
                   <small class="text-danger"
                     *ngIf="userFormAdd.get('mobile').touched && userFormAdd.get('mobile').hasError('pattern')">Format
                     should be either 2547XXXXXXX or 07XXXXXXXX</small>
+                </div>
+              </div> -->
+              <div class="row form-group">
+
+                <label class="control-label col-sm-3" for="inputName">Phone Number</label>
+                <div class="col-sm-7">
+
+                  <ngx-intl-tel-input [cssClass]="' custom form-control '" [preferredCountries]="['ke', 'rw']"
+                    placeholder="722XXXXXX" [enableAutoCountrySelect]="true" name="phone" formControlName="mobile">
+                  </ngx-intl-tel-input>
+                  <small class="text-danger" *ngIf="userFormAdd.get('mobile').invalid">Phone
+                    Number Format should be 7XXXXXXXX </small>
+
+
+
+                </div>
+              </div>
+
+              <div class="row form-group">
+
+                <label class="control-label col-sm-3" for="inputName"></label>
+                <div class="col-sm-7">
+
+                  <input value={{userFormAdd.value.mobile.internationalNumber}} readonly
+                    class="form-control validation-field">
+
+
                 </div>
               </div>
               <div class="row form-group">
