--- a/src/app/pages/collections/collections.component.html
+++ b/src/app/pages/collections/collections.component.html
@@ -1,18 +1,31 @@
 <block-ui>
   <div class="box box-primary">
     <div class="box-body">
-      <div class="widget-controls">
-        <a class="btn btn-info btn-sm mb-1" routerLink="/collections/create"><i class="fa fa-user"></i> Customer
-          Pickup</a>
-        &nbsp;&nbsp;&nbsp;
-        <a class="btn btn-info btn-sm mb-1" routerLink="/collections/lipalater"><i class="fa fa-shopping-cart"></i>
-          Lipalater
-          Pickup</a>
+      <div class="widget-controls row">
+        <div class="col-sm-6">
+          <a class="btn btn-info btn-sm mb-1" routerLink="/collections/create"><i class="fa fa-user"></i> Customer
+            Pickup</a>
+          &nbsp;&nbsp;&nbsp;
+          <a class="btn btn-info btn-sm mb-1" routerLink="/collections/lipalater"><i class="fa fa-shopping-cart"></i>
+            Lipalater
+            Pickup</a>
 
+        </div>
+        <div class="col-sm-2"></div>
+        <div class="col-sm-4">
+          <div class="input-group search-box">
+            <input type="text" [(ngModel)]="searchKey" class="form-control search-input"
+              placeholder="Search this content">
+            <div class="input-group-append">
+              <button class="btn btn-info" type="button" (click)="onSearch()">
+                <i class="fa fa-search"></i>
+              </button>
+            </div>
+          </div>
+        </div>
       </div>
-
       <span id="responseText"></span>
-      <table class="table table-striped  table-sm row-border hover" datatable [dtOptions]="dtOptions">
+      <table class="table table-striped  table-sm row-border hover" *ngIf="total_records > 0">
         <thead>
           <tr>
             <th></th>
@@ -31,31 +44,47 @@
             <td>{{item.store}}</td>
           </tr>
         </tbody>
+
       </table>
+
+      <div class="row" *ngIf="total_records > 0">
+
+        <div class="col-sm-6">
+          <span>showing {{((current_page-1)*page_size) + 1}} to {{current_page*page_size}} of {{total_records}}</span>
+        </div>
+
+        <nav aria-label="..." class="col-sm-6">
+          <ul class="pagination">
+            <li class="page-item {{(current_page == 1)? 'disabled': ''}}">
+              <a class="page-link" (click)="loadPage(1)" tabindex="-1">First</a>
+            </li>
+            <li class="page-item {{(current_page == 1)? 'disabled': ''}}">
+              <a class="page-link" (click)="loadPage(current_page-1)" tabindex="-1">Previous</a>
+            </li>
+            <li class="page-item active">
+              <a class="page-link">{{current_page}}</a>
+            </li>
+            <!--
+              <li class="page-item active">
+                <a class="page-link" href="#">2 <span class="sr-only">(current)</span></a>
+              </li>
+              <li class="page-item"><a class="page-link" href="#">3</a></li> -->
+
+            <li class="page-item {{(current_page == total_pages)? 'disabled': ''}}">
+              <a class="page-link" (click)="loadPage(current_page+1)" tabindex="-1">Next</a>
+            </li>
+            <li class="page-item {{(current_page == total_pages)? 'disabled': ''}}">
+              <a class="page-link" (click)="loadPage(total_pages)" tabindex="-1">Last</a>
+            </li>
+
+          </ul>
+        </nav>
+      </div>
+
+      <div *ngIf="total_records == 0">
+        <div class="alert alert-lg alert-warning">No data available</div>
+      </div>
 
     </div>
   </div>
 </block-ui>
-
-<!--
-  approved_amount: "35000.0"
-  buying_price: "25000.0"
-  created_at: "2019-04-03T16:48:08.404Z"
-  created_by: null
-  customer_email: "test@dummy111.com"
-  customer_id_number: "32150682"
-  customer_names: "Jackson Doe"
-  customer_phone_number: "725958640"
-  id: "48af6006-02c5-4821-b43e-3c1b3f2b75db"
-  item: null
-  item_description: "television sony black"
-  item_type: "television sony black"
-  pick_up_option: "pickup"
-  pick_up_type: "store_pickup"
-  sales_agent: null
-  source_id: "jkiarie"
-  status: "pending"
-  store: "jkiarie"
-  string: null
-  updated_at: "2019-04-03T16:48:08.404Z"
-  -->
