--- a/src/app/pages/pending/pending.component.html
+++ b/src/app/pages/pending/pending.component.html
@@ -1,12 +1,25 @@
 <block-ui>
   <div class="box box-primary">
     <div class="box-body">
-      <div class="widget-controls">
-        Items awaiting collection
+      <div class="widget-controls row">
+        <div class="col-sm-6">
+          All Items Awaiting Pick up
+        </div>
+        <div class="col-sm-2"></div>
+        <div class="col-sm-4">
+          <div class="input-group search-box">
+            <input type="text" [(ngModel)]="searchKey" class="form-control search-input"
+              placeholder="Search this content">
+            <div class="input-group-append">
+              <button class="btn btn-info" type="button" (click)="onSearch()">
+                <i class="fa fa-search"></i>
+              </button>
+            </div>
+          </div>
+        </div>
       </div>
-
       <span id="responseText"></span>
-      <table class="table table-striped  table-sm row-border hover" datatable [dtOptions]="dtOptions">
+      <table class="table table-striped  table-sm row-border hover" *ngIf="total_records > 0">
         <thead>
           <tr>
             <th></th>
@@ -15,7 +28,7 @@
             <th>Customer Mobile</th>
             <th>Item</th>
             <th>Delivery Option</th>
-            <th>Date approved</th>
+            <th>Store</th>
             <th>Status</th>
           </tr>
         </thead>
@@ -26,13 +39,51 @@
             <td>{{item.customer_id_number}}</td>
             <td>{{item.customer_phone_number}}</td>
             <td>{{item.item_description}}</td>
-            <td>{{item.pick_up_type}}</td>
-            <td>{{item.approved_at}}</td>
+            <td>{{(item.pick_up_type =='store_pickup')?'customer pick up':'lipalater pick up'}}</td>
+            <td>{{item.store}}</td>
             <td>{{item.status}}</td>
 
           </tr>
         </tbody>
       </table>
+
+      <div class="row" *ngIf="total_records > 0">
+
+        <div class="col-sm-6">
+          <span>showing {{((current_page-1)*page_size) + 1}} to {{current_page*page_size}} of {{total_records}}</span>
+        </div>
+
+        <nav aria-label="..." class="col-sm-6">
+          <ul class="pagination">
+            <li class="page-item {{(current_page == 1)? 'disabled': ''}}">
+              <a class="page-link" (click)="loadPage(1)" tabindex="-1">First</a>
+            </li>
+            <li class="page-item {{(current_page == 1)? 'disabled': ''}}">
+              <a class="page-link" (click)="loadPage(current_page-1)" tabindex="-1">Previous</a>
+            </li>
+            <li class="page-item active">
+              <a class="page-link">{{current_page}}</a>
+            </li>
+            <!--
+                  <li class="page-item active">
+                    <a class="page-link" href="#">2 <span class="sr-only">(current)</span></a>
+                  </li>
+                  <li class="page-item"><a class="page-link" href="#">3</a></li> -->
+
+            <li class="page-item {{(current_page == total_pages)? 'disabled': ''}}">
+              <a class="page-link" (click)="loadPage(current_page+1)" tabindex="-1">Next</a>
+            </li>
+            <li class="page-item {{(current_page == total_pages)? 'disabled': ''}}">
+              <a class="page-link" (click)="loadPage(total_pages)" tabindex="-1">Last</a>
+            </li>
+
+          </ul>
+        </nav>
+      </div>
+
+      <div *ngIf="total_records == 0">
+        <div class="alert alert-lg alert-warning">No data available</div>
+      </div>
 
     </div>
   </div>
