--- a/src/app/pages/stores/store.component.html
+++ b/src/app/pages/stores/store.component.html
@@ -1,10 +1,8 @@
 <block-ui>
   <div class="box box-primary">
     <div class="box-body">
-      <!-- <div class="widget-controls">
-               <a  class="btn btn-info btn-sm mb-1" routerLink="/stores/create"><i class="fa fa-plus"></i> Add Store</a>
 
-            </div> -->
+
 
       <div class="widget-controls row">
         <div class="col-sm-6">
@@ -25,7 +23,7 @@
         </div>
       </div>
       <span id="responseText"></span>
-      <table id="stores-table" class="table table-striped  table-sm row-border hover">
+      <table class="table table-striped  table-sm row-border hover" *ngIf="total_records > 0">
         <thead>
           <tr>
             <th>Name</th>
@@ -54,6 +52,44 @@
           </tr>
         </tbody>
       </table>
+
+      <div class="row" *ngIf="total_records > 0">
+
+        <div class="col-sm-6">
+          <span>showing {{((current_page-1)*page_size) + 1}} to {{current_page*page_size}} of {{total_records}}</span>
+        </div>
+
+        <nav aria-label="..." class="col-sm-6">
+          <ul class="pagination">
+            <li class="page-item {{(current_page == 1)? 'disabled': ''}}">
+              <a class="page-link" (click)="loadPage(1)" tabindex="-1">First</a>
+            </li>
+            <li class="page-item {{(current_page == 1)? 'disabled': ''}}">
+              <a class="page-link" (click)="loadPage(current_page-1)" tabindex="-1">Previous</a>
+            </li>
+            <li class="page-item active">
+              <a class="page-link">{{current_page}}</a>
+            </li>
+            <!--
+                <li class="page-item active">
+                  <a class="page-link" href="#">2 <span class="sr-only">(current)</span></a>
+                </li>
+                <li class="page-item"><a class="page-link" href="#">3</a></li> -->
+
+            <li class="page-item {{(current_page == total_pages)? 'disabled': ''}}">
+              <a class="page-link" (click)="loadPage(current_page+1)" tabindex="-1">Next</a>
+            </li>
+            <li class="page-item {{(current_page == total_pages)? 'disabled': ''}}">
+              <a class="page-link" (click)="loadPage(total_pages)" tabindex="-1">Last</a>
+            </li>
+
+          </ul>
+        </nav>
+      </div>
+
+      <div *ngIf="total_records == 0">
+        <div class="alert alert-lg alert-warning">No data available</div>
+      </div>
 
     </div>
   </div>
