--- a/src/app/pages/myaccount/myaccount.component.html
+++ b/src/app/pages/myaccount/myaccount.component.html
@@ -112,7 +112,7 @@
 
       <div class="row form-heading">
         <div class="col-md-1"></div>
-        <h4 class="col-md-11">Store Details</h4>
+        <h4 class="col-md-11">my account details</h4>
       </div>
       <hr>
       <div class="row">
