--- a/src/app/pages/stores/update/update.component.html
+++ b/src/app/pages/stores/update/update.component.html
@@ -396,8 +396,16 @@
 
                 <!--Bank Details-->
 
+
+
                 <ngb-tab title="Payment Details">
                   <ng-template ngbTabContent>
+
+                    <div class="row form-group" *ngIf="saveErrors">
+                      <div class="alert alert-bg alert-warning">
+                        Errors! {{saveErrors}}
+                      </div>
+                    </div>
 
                     <div class="row form-group">
                       <label class="control-label col-sm-3" for="title"> <span class="float-right"> Bank: </span>
