--- a/src/app/pages/partners/update/update.component.html
+++ b/src/app/pages/partners/update/update.component.html
@@ -35,6 +35,12 @@
             <div class="col-md-1"></div>
             <form [formGroup]="beFormAdd" (ngSubmit)="onEditSubmit(beFormAdd)" class="col-md-11 form-horizontal">
 
+              <div class="row form-group" *ngIf="saveErrors">
+                <div class="alert alert-bg alert-warning">
+                  Errors! {{saveErrors}}
+                </div>
+              </div>
+
               <div class="row form-group">
                 <label class="control-label col-sm-3" for="title"><span class="float-right"> Registered Name:
                   </span></label>
