--- a/src/app/pages/stores/create/create.component.html
+++ b/src/app/pages/stores/create/create.component.html
@@ -376,6 +376,13 @@
                 <ngb-tab title="Contact Details">
 
                   <ng-template ngbTabContent>
+
+                    <div class="row form-group" *ngIf="saveErrors">
+                      <div class="alert alert-bg alert-warning">
+                        Errors! {{saveErrors}}
+                      </div>
+                    </div>
+
                     <div class="row form-group">
                       <label class="control-label col-sm-3" for="title"><span class="float-right"> Store Manager:
                         </span></label>
