--- a/src/app/pages/partners/view/view.component.html
+++ b/src/app/pages/partners/view/view.component.html
@@ -26,19 +26,18 @@
         <div id="cccform" class="container">
           <div class="row form-heading">
             <div class="col-md-1"></div>
-            <h4 class="col-md-11">Adding New Partner</h4>
+            <h4 class="col-md-11">Edit Partner Information</h4>
           </div>
           <hr>
           <div class="row">
 
 
             <div class="col-md-1"></div>
-            <form [formGroup]="beFormAdd" (ngSubmit)="onAddSubmit(beFormAdd)" class="col-md-11 form-horizontal">
+            <form [formGroup]="beFormAdd" class="col-md-11 form-horizontal">
 
               <div class="row form-group" *ngIf="saveErrors">
                 <div class="alert alert-bg alert-warning">
                   Errors! {{saveErrors}}
-
                 </div>
               </div>
 
@@ -46,7 +45,7 @@
                 <label class="control-label col-sm-3" for="title"><span class="float-right"> Registered Name:
                   </span></label>
                 <div class="col-sm-7">
-                  <input type="text" formControlName="orgName" class="form-control"
+                  <input readonly type="text" formControlName="orgName" class="form-control"
                     [ngClass]="{ 'is-invalid': submitted && f.orgName.errors }"
                     placeholder="enter business registeres name" />
 
@@ -62,47 +61,12 @@
 
                 </div>
               </div>
-
-
-              <!-- <div class="row form-group">
-                <label class="control-label col-sm-3" for="title"> <span class="float-right"> Mobile: </span> </label>
-                <div class="col-sm-7">
-                  <input type="text" formControlName="orgMobile" class="form-control"
-                    [ngClass]="{ 'is-invalid': submitted && f.orgMobile.errors }"
-                    placeholder="contact phone number 2547......." />
-                  <div *ngIf="submitted && f.orgMobile.errors" class="invalid-feedback">
-                    <div *ngIf="f.orgMobile.errors.required">Mobile is required</div>
-                  </div>
-                  <small class="text-danger"
-                    *ngIf="beFormAdd.get('orgMobile').touched && beFormAdd.get('orgMobile').hasError('required')">Mobile
-                    is required</small>
-                  <small class="text-danger"
-                    *ngIf="beFormAdd.get('orgMobile').touched && beFormAdd.get('orgMobile').hasError('pattern')">Invalid
-                    Mobile Number </small>
-                </div>
-              </div> -->
               <div class="row form-group">
                 <label class="control-label col-sm-3" for="title"> <span class="float-right"> Mobile: </span> </label>
+
                 <div class="col-sm-7">
 
-                  <ngx-intl-tel-input [cssClass]="' custom form-control '" [preferredCountries]="['ke', 'rw']"
-                    [enablePlaceholder]="true" [enableAutoCountrySelect]="true" name="orgMobile"
-                    formControlName="orgMobile">
-                  </ngx-intl-tel-input>
-
-                  <small class="text-danger" *ngIf="beFormAdd.get('orgMobile').invalid">Phone
-                    Number Format should be 7XXXXXXXX </small>
-
-
-
-                </div>
-              </div>
-              <div class="row form-group">
-
-                <label class="control-label col-sm-3" for="inputName"></label>
-                <div class="col-sm-7">
-
-                  <input value={{beFormAdd.value.orgMobile.internationalNumber}} readonly
+                  <input readonly value={{beFormAdd.value.orgMobile.internationalNumber}} readonly
                     class="form-control validation-field">
 
 
@@ -112,9 +76,12 @@
               <div class="row form-group">
                 <label class="control-label col-sm-3" for="title"> <span class="float-right"> Location: </span></label>
                 <div class="col-sm-7">
-                  <input type="text" formControlName="orgLocation" class="form-control"
+                  <input readonly type="text" formControlName="orgLocation" class="form-control"
                     [ngClass]="{ 'is-invalid': submitted && f.orgLocation.errors }"
                     placeholder="enter business HQ location" />
+                  <div *ngIf="submitted && f.orgLocation.errors" class="invalid-feedback">
+                    <div *ngIf="f.orgLocation.errors.required">Location is required</div>
+                  </div>
                   <small class="text-danger"
                     *ngIf="beFormAdd.get('orgLocation').touched && beFormAdd.get('orgLocation').hasError('required')">Location
                     is required</small>
@@ -124,7 +91,7 @@
               <div class="row form-group">
                 <label class="control-label col-sm-3" for="title"> <span class="float-right"> Email: </span></label>
                 <div class="col-sm-7">
-                  <input type="text" formControlName="orgEmail" class="form-control"
+                  <input readonly type="text" formControlName="orgEmail" class="form-control"
                     [ngClass]="{ 'is-invalid': submitted && f.orgEmail.errors }"
                     placeholder="enter the business email address" />
                   <div *ngIf="submitted && f.orgEmail.errors" class="invalid-feedback">
@@ -141,24 +108,48 @@
               <div class="row form-group">
                 <label class="control-label col-sm-3" for="title"> <span class="float-right"> Telephone: </span></label>
                 <div class="col-sm-7">
-                  <input type="text" formControlName="orgTelephone" class="form-control"
+                  <input readonly type="text" formControlName="orgTelephone" class="form-control"
                     [ngClass]="{ 'is-invalid': submitted && f.orgTelephone.errors }" />
                   <div *ngIf="submitted && f.orgTelephone.errors" class="invalid-feedback">
                     <div *ngIf="f.orgTelephone.errors.required">Telephone is required</div>
                   </div>
+                  <small class="text-danger"
+                    *ngIf="beFormAdd.get('orgTelephone').touched && beFormAdd.get('orgTelephone').hasError('required')">Telephone
+                    is required</small>
 
                 </div>
               </div>
 
+              <!-- <div class="row form-group">
+                <label class="control-label col-sm-3" for="title"><span class="float-right"> Years of Incorporation:
+                  </span></label>
+                <div class="col-sm-7">
+                 <input readonly type="text" formControlName="orgYearsOfOperation" class="form-control"
+                    [ngClass]="{ 'is-invalid': submitted && f.orgYearsOfOperation.errors }" />
+                  <div *ngIf="submitted && f.orgYearsOfOperation.errors" class="invalid-feedback">
+                    <div *ngIf="f.orgYearsOfOperation.errors.required">Years of Incorporation</div>
+                  </div>
+                  <small class="text-danger"
+                    *ngIf="beFormAdd.get('orgYearsOfOperation').touched && beFormAdd.get('orgYearsOfOperation').hasError('required')">Year
+                    of Incorporation is required</small>
+
+                </div>
+              </div> -->
+              <!--<div class="row form-group">
+                      <label class="control-label col-sm-3" for="title"><span class="float-right"> Speciality: </span></label>
+                          <div class="col-sm-7">
+                            <select formControlName="orgSpeciality" class="form-control validation-field">
+                              <option value="">Select Speciality</option>
+                          <option *ngFor="let o of specialityOptions" [ngValue]="o.name">{{o.name}}</option>
+                      </select>
+                            <small class="text-danger" *ngIf="beFormAdd.get('orgSpeciality').touched && beFormAdd.get('orgSpeciality').hasError('required')">Speciality is required</small>
+                        </div>
+                     </div>-->
+
               <div class="row form-group">
                 <label class="control-label col-sm-3" for="title"><span class="float-right"> Speciality: </span></label>
                 <div class="col-sm-7">
-
-                  <ng-multiselect-dropdown [placeholder]="'Select Speciality'" [data]="specialityOptions"
-                    formControlName="selectedItems" [settings]="dropdownSettings" [(ngModel)]="selectedSpeciality"
-                    (onDeSelect)="onDeSelectSpeciality($event)" (onSelect)="onSpecialitySelect($event)"
-                    (onSelectAll)="onSelectAllSpeciality($event)">
-                  </ng-multiselect-dropdown>
+                  <input readonly type="text" class="form-control" value="" />
                 </div>
               </div>
 
@@ -166,15 +157,15 @@
                 <label class="control-label col-sm-3" for="title"><span class="float-right"> Year of Incorporation:
                   </span></label>
                 <div class="col-sm-7">
-                  <input type="number" formControlName="orgYearsOfOperation" class="form-control"
+                  <input readonly type="number" formControlName="orgYearsOfOperation" class="form-control"
                     [ngClass]="{ 'is-invalid': submitted && f.orgYearsOfOperation.errors }" />
-
+                  <div *ngIf="submitted && f.orgYearsOfOperation.errors" class="invalid-feedback">
+                    <div *ngIf="f.orgYearsOfOperation.errors.required">Year of Incorporation is required</div>
+                  </div>
                   <small class="text-danger"
                     *ngIf="beFormAdd.get('orgYearsOfOperation').touched && beFormAdd.get('orgYearsOfOperation').hasError('required')">Year
                     of Incorporation is required</small>
-                  <small class="text-danger" *ngIf="beFormAdd.get('orgYearsOfOperation').invalid"> Number Must be in
-                    range
-                  </small>
+
                 </div>
               </div>
 
@@ -182,14 +173,14 @@
                 <label class="control-label col-sm-3" for="title"><span class="float-right"> Number of Branches:
                   </span></label>
                 <div class="col-sm-7">
-                  <input type="number" formControlName="numberOfBranches" class="form-control"
+                  <input readonly type="number" formControlName="numberOfBranches" class="form-control"
                     [ngClass]="{ 'is-invalid': submitted && f.numberOfBranches.errors }" />
+                  <div *ngIf="submitted && f.numberOfBranches.errors" class="invalid-feedback">
+                    <div *ngIf="f.numberOfBranches.errors.required">Year of Incorporation is required</div>
+                  </div>
                   <small class="text-danger"
                     *ngIf="beFormAdd.get('numberOfBranches').touched && beFormAdd.get('numberOfBranches').hasError('required')">Number
                     of branches is a required field</small>
-                  <small class="text-danger" *ngIf="beFormAdd.get('numberOfBranches').invalid"> Number Must be in range
-                  </small>
-
 
                 </div>
               </div>
@@ -214,7 +205,7 @@
                 <label class="control-label col-sm-3" for="title"><span class="float-right"> Credit Duration In Days:
                   </span></label>
                 <div class="col-sm-7">
-                  <input type="number" formControlName="creditDurationInDays" class="form-control"
+                  <input readonly type="number" formControlName="creditDurationInDays" class="form-control"
                     [ngClass]="{ 'is-invalid': submitted && f.creditDurationInDays.errors }" />
                   <div *ngIf="submitted && f.creditDurationInDays.errors" class="invalid-feedback">
                     <div *ngIf="f.creditDurationInDays.errors.required">Credit duration is required</div>
@@ -234,15 +225,20 @@
                     <option value="">Select Account Manager</option>
                     <option *ngFor="let o of UserOptions" [ngValue]="o.id">{{o.firstname + ' ' + o.lastname}}</option>
                   </select>
+                  <small class="text-danger"
+                    *ngIf="beFormAdd.get('accountManager').touched && beFormAdd.get('accountManager').hasError('required')">Account
+                    Manager is required</small>
                 </div>
               </div>
+
+
 
               <div class="row form-group">
                 <div class="col-sm-3"></div>
                 <div class="col-sm-7">
                   <div class="float-right ">
-                    <button class="btn btn-danger " type="cancel" style="margin-right: 10px;
-    min-width: 100px;" routerLink="/partners/">Cancel</button>
+                    <a class="btn btn-danger " type="cancel" style="margin-right: 10px;
+    min-width: 100px;" routerLink="/partners/">Cancel</a>
                     <button [disabled]="beFormAdd.invalid" class="btn btn-success " type="submit"
                       style="min-width: 100px;">Submit</button>
                   </div>
