--- a/src/app/pages/partners/update/update.component.html
+++ b/src/app/pages/partners/update/update.component.html
@@ -63,23 +63,6 @@
               </div>
 
 
-              <!--div class="row form-group">
-                <label class="control-label col-sm-3" for="title"> <span class="float-right"> Mobile: </span> </label>
-                <div class="col-sm-7">
-                  <input type="text" formControlName="orgMobile" class="form-control"
-                    [ngClass]="{ 'is-invalid': submitted && f.orgMobile.errors }"
-                    placeholder="contact phone number 2547......." />
-                  <div *ngIf="submitted && f.orgMobile.errors" class="invalid-feedback">
-                    <div *ngIf="f.orgMobile.errors.required">Mobile is required</div>
-                  </div>
-                  <small class="text-danger"
-                    *ngIf="beFormAdd.get('orgMobile').touched && beFormAdd.get('orgMobile').hasError('required')">Mobile
-                    is required</small>
-                  <small class="text-danger"
-                    *ngIf="beFormAdd.get('orgMobile').touched && beFormAdd.get('orgMobile').hasError('pattern')">Invalid
-                    Mobile Number </small>
-                </div>
-              </div-->
 
               <div class="row form-group">
                 <label class="control-label col-sm-3" for="title"> <span class="float-right"> Mobile: </span> </label>
@@ -222,6 +205,10 @@
                   <small class="text-danger"
                     *ngIf="beFormAdd.get('numberOfBranches').touched && beFormAdd.get('numberOfBranches').hasError('required')">Number
                     of branches is a required field</small>
+
+                  <small class="text-danger" *ngIf="beFormAdd.get('numberOfBranches').invalid"> Number Must be in
+                    range
+                  </small>
 
                 </div>
               </div>
