--- a/src/app/pages/stores/create/create.component.html
+++ b/src/app/pages/stores/create/create.component.html
@@ -118,6 +118,9 @@
                         <small class="text-danger"
                           *ngIf="storeFormAdd.get('storeDisburseEmail').touched && storeFormAdd.get('storeDisburseEmail').hasError('required')">Disburse
                           Email is required</small>
+                        <small class="text-danger"
+                          *ngIf="storeFormAdd.get('storeDisburseEmail').touched && storeFormAdd.get('storeDisburseEmail').hasError('email')">Invalid
+                          email address</small>
                       </div>
                     </div>
 
@@ -134,6 +137,9 @@
                         <small class="text-danger"
                           *ngIf="storeFormAdd.get('storeDisburseEmail1').touched && storeFormAdd.get('storeDisburseEmail1').hasError('required')">Disburse
                           Email CC1 is required</small>
+                        <small class="text-danger"
+                          *ngIf="storeFormAdd.get('storeDisburseEmail1').touched && storeFormAdd.get('storeDisburseEmail1').hasError('email')">Invalid
+                          email address</small>
                       </div>
                     </div>
                     <div class="row form-group">
@@ -149,6 +155,9 @@
                         <small class="text-danger"
                           *ngIf="storeFormAdd.get('storeDisburseEmail2').touched && storeFormAdd.get('storeDisburseEmail2').hasError('required')">Disburse
                           Email CC2 is required</small>
+                        <small class="text-danger"
+                          *ngIf="storeFormAdd.get('storeDisburseEmail2').touched && storeFormAdd.get('storeDisburseEmail2').hasError('email')">Invalid
+                          email address</small>
                       </div>
                     </div>
 
@@ -185,7 +194,7 @@
                     </div>
 
                     <div class="row form-group">
-                      <label class="control-label col-sm-3" for="title"> <span class="float-right"> Store Target:
+                      <label class="control-label col-sm-3" for="title"> <span class="float-right"> Store Target (KES):
                         </span></label>
                       <div class="col-sm-7">
                         <input type="text" formControlName="storeTarget" class="form-control"
@@ -196,6 +205,8 @@
                         <small class="text-danger"
                           *ngIf="storeFormAdd.get('storeTarget').touched && storeFormAdd.get('storeTarget').hasError('required')">Target
                           is required</small>
+                        <small class="text-danger" *ngIf="storeFormAdd.get('storeTarget').invalid"> Must be a number
+                        </small>
                       </div>
                     </div>
 
@@ -214,11 +225,15 @@
                           *ngIf="storeFormAdd.get('numberOfEmployees').touched && storeFormAdd.get('numberOfEmployees').hasError('required')">Number
                           of Employees
                           is required</small>
+                        <small class="text-danger" *ngIf="storeFormAdd.get('numberOfEmployees').invalid"> Must be a
+                          number
+                        </small>
                       </div>
                     </div>
 
                     <div class="row form-group">
-                      <label class="control-label col-sm-3" for="title"> <span class="float-right"> Monthly Revenue:
+                      <label class="control-label col-sm-3" for="title"> <span class="float-right"> Monthly Revenue
+                          (KES):
                         </span></label>
                       <div class="col-sm-7">
                         <input type="number" formControlName="monthlyRevenue" class="form-control"
@@ -231,6 +246,9 @@
                           *ngIf="storeFormAdd.get('monthlyRevenue').touched && storeFormAdd.get('monthlyRevenue').hasError('required')">Monthly
                           Revenue
                           is required
+                        </small>
+                        <small class="text-danger" *ngIf="storeFormAdd.get('monthlyRevenue').invalid"> Must be a
+                          number
                         </small>
                       </div>
                     </div>
@@ -268,7 +286,7 @@
                       <div class="col-sm-7">
                         <input type="text" formControlName="storeBankAccount" class="form-control"
                           [ngClass]="{ 'is-invalid': submitted && f.storeBankAccount.errors }"
-                          placeholder="bank account name" />
+                          placeholder="bank account number" />
                         <div *ngIf="submitted && f.storeBankAccount.errors" class="invalid-feedback">
                           <div *ngIf="f.storeBankAccount.errors.required">Mobile is required</div>
                         </div>
@@ -288,7 +306,7 @@
                       <div class="col-sm-7">
                         <input type="text" formControlName="storeBankAccountName" class="form-control"
                           [ngClass]="{ 'is-invalid': submitted && f.storeBankAccountName.errors }"
-                          placeholder="contact phone number 2547......." />
+                          placeholder="bank account name......." />
                         <div *ngIf="submitted && f.storeBankAccountName.errors" class="invalid-feedback">
                           <div *ngIf="f.storeBankAccountName.errors.required">Mobile is required</div>
                         </div>
@@ -545,30 +563,21 @@
                       </div>
                     </div>
 
-                    <!--<div class="row form-group">
-                          <label class="control-label col-sm-3" for="title"> <span class="float-right"> Contact Person Email: </span></label>
-                          <div class="col-sm-7">
-                            <input type="text" formControlName="storeContactEmail" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.storeContactEmail.errors }" placeholder="enter the contact email address"/>
-                            <div *ngIf="submitted && f.storeContactEmail.errors" class="invalid-feedback">
-                              <div *ngIf="f.storeContactEmail.errors.required">Manager Email is required</div>
-                            </div>
-                            <small class="text-danger" *ngIf="storeFormAdd.get('storeContactEmail').touched && storeFormAdd.get('storeContactEmail').hasError('required')">Contact Email is required</small>
-                            <small class="text-danger" *ngIf="storeFormAdd.get('storeContactEmail').touched && storeFormAdd.get('storeContactEmail').hasError('email')">Invalid contact email address</small>
-                          </div>
-                      </div>-->
-
 
                   </ng-template>
                 </ngb-tab>
                 <!--End of Contact Details-->
 
               </ngb-tabset>
+
+
               <div class="row form-group">
                 <div class="col-sm-3"></div>
                 <div class="col-sm-7">
                   <div class="float-right ">
+
                     <button class="btn btn-danger " type="cancel" style="margin-right: 10px;
-    min-width: 100px;" routerLink="/stores/">Cancel</button>
+                        min-width: 100px;" routerLink="/stores/">Cancel</button>
                     <button [disabled]="storeFormAdd.invalid" class="btn btn-success " type="submit"
                       style="min-width: 100px;">Submit</button>
                   </div>
