--- a/src/app/pages/stores/store.component.html
+++ b/src/app/pages/stores/store.component.html
@@ -29,8 +29,9 @@
             <th>Name</th>
             <th>Partner</th>
             <th>Disburse Email</th>
-            <th>Contact Person</th>
-            <th>Contact Person Mobile</th>
+            <th>Manager</th>
+            <th>Manager Mobile</th>
+            <th>Manager Email</th>
 
             <th>Actions</th>
           </tr>
@@ -40,13 +41,15 @@
             <td>{{item.name}}</td>
             <td>{{item.partner.name}}</td>
             <td>{{item.disburse_email}}</td>
-            <td>{{item.contact_person}}</td>
-            <td>{{item.contact_person_mobile}}</td>
+            <td>{{item.manager}}</td>
+            <td>{{item.manager_phone}}</td>
+            <td>{{item.manager_email}}</td>
             <td>
               <div class="float-right"> <button type="button" class="btn btn-xs btn-warning"
                   title="Edit this business details" style="margin-right: 5px" (click)="onEdit(item)"> <i
-                    class="fa fa-pencil"></i></button><button type="button" class="btn btn-xs btn-danger"
-                  title="Trash this Business details" (click)="onDelete(item)"> <i class="fa fa-trash"></i></button>
+                    class="fa fa-pencil"></i></button>
+                <!-- <button type="button" class="btn btn-xs btn-danger"
+                  title="Trash this Business details" (click)="onDelete(item)"> <i class="fa fa-trash"></i></button> -->
               </div>
             </td>
           </tr>
