--- a/src/app/pages/internal-users/update/update.component.html
+++ b/src/app/pages/internal-users/update/update.component.html
@@ -37,6 +37,13 @@
             <form autocomplete="off" [formGroup]="userFormEdit" (ngSubmit)="onAddSubmit(userFormEdit)"
               class="col-md-11 form-horizontal">
 
+              <div class="row form-group" *ngIf="saveErrors">
+                <div class="alert alert-bg alert-warning">
+                  Errors! {{saveErrors}}
+
+                </div>
+              </div>
+
 
               <div class="row form-group">
 
