change link from collected to item pickup

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -64,7 +64,7 @@
                 </a>
               </li>
               <li class="list-group-item">
-                <a class="nav-link sales-link" routerLink="/collections">Collected
+                <a class="nav-link sales-link" routerLink="/collections">Item Pickup
                   <i class="fa fa-cart-plus" style="color:#88b840"></i>
                 </a>
               </li>
